compiler/tools/fpp-check/test/connection_pattern/telemetry_missing_source_port.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/connection_pattern/telemetry_missing_source_port.fpp: 18.36
    telemetry connections instance $telemetry { c }
                                   ^
error: instance telemetry has no telemetry input port
